# fprime-baremetal-reference

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  project.cmake  settings.ini
.github/actions/: fit_composite_action.yml
.github/workflows/: baremetal_ci.yml  baremetal_ci_teensy.yml  learn-github-actions.yml  reusable_fit.yml  reusable_fit_ci.yml  temp_ci.yml
BaremetalReference/: CMakeLists.txt  Main.cpp  README.md  settings.ini
BaremetalReference/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
BaremetalReference/Radio/: CMakeLists.txt
BaremetalReference/Top/: BaremetalReferencePackets.xml  BaremetalReferenceTopology.cpp  BaremetalReferenceTopology.hpp  BaremetalReferenceTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
BaseDeployment/: CMakeLists.txt  Main.cpp
BaseDeployment/Top/: BaseDeploymentPackets.xml  BaseDeploymentTopology.cpp  BaseDeploymentTopology.hpp  BaseDeploymentTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
Components/: CMakeLists.txt
Components/LedBlinker/: LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
Components/Radio/: CMakeLists.txt
Components/Sensors/: CMakeLists.txt
RadioPassthrough/: CMakeLists.txt  Main.cpp  README.md
RadioPassthrough/Top/: CMakeLists.txt  RadioPassthroughPackets.xml  RadioPassthroughTopology.cpp  RadioPassthroughTopology.hpp  RadioPassthroughTopologyDefs.hpp  instances.fpp  topology.fpp
RemoteDeployment/: CMakeLists.txt  Main.cpp  README.md
RemoteDeployment/Top/: CMakeLists.txt  RemoteDeploymentPackets.xml  RemoteDeploymentTopology.cpp  RemoteDeploymentTopology.hpp  RemoteDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
SystemRef/: CMakeLists.txt  Main.cpp  README.md  settings.ini
SystemRef/LedBlinker/: LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
SystemRef/Top/: CMakeLists.txt  SystemRefPackets.xml  SystemRefTopology.cpp  SystemRefTopology.hpp  SystemRefTopologyDefs.hpp  instances.fpp  topology.fpp
SystemRef/build-fprime-automatic-native/: CMakeCache.txt  Makefile  cmake_install.cmake  (+4 more)
SystemRef/build-fprime-automatic-native-ut/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fpp-depend-input  hashes.txt  locs.fpp  prescan-dep-list
config/: AcConstants.fpp  AcConstants.ini  ActiveLoggerImplCfg.hpp  BufferManagerComponentImplCfg.hpp  CommandDispatcherImplCfg.hpp  DeframerCfg.hpp  FpConfig.h  StaticMemoryConfig.hpp  TlmChanImplCfg.hpp
docs/: arduino-cli-install.md  deployment-setup.md  run-baremetal-reference.md  run-base-deployment.md
lib/: CMakeLists.txt
lib/arduino/: CMakeLists.txt
(+1821 files in other folders)
